# dcc001-trabalho

./: CMakeLists.txt  README.md  graphviz.sh
include/: Graph.h  Utils.h
object/: Graph.cpp
outputs/: grafo.dot
scripts/: main.py
src/: main.cpp
